# string_obfuscator

./: README.md  setup.cfg
src/string_obfuscator/: obfuscate.py
tests/: test_obfuscate.py
