[metadata]
name = string-obfuscator
version = 1.0.0
author = Eduardo Lodi Marzano
author_email = lodi001@uol.com.br
description = A simple string obfuscator for obfuscating strings inside nested dicts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eduardolm/string_obfuscator
project_urls =
    Bug Tracker = https://github.com/eduardolm/string_obfuscator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src